Complete ArtFi Stages 2-7
